# tigerbeetle

./: build.zig
src/: python_bindings.zig
src/clients/python/: .gitignore  build.py  pdm_build.py  pyproject.toml  tb_client_header.zig
src/clients/python/samples/basic/: main.py
src/clients/python/samples/two-phase/: main.py
src/clients/python/samples/two-phase-many/: main.py
src/clients/python/tb_client/: __init__.py  _tb_client.c  bindings.py  client.py
