[project]
authors = [{ name = "Lukas Jansen", email = "info@ljnsn.com" }]
requires-python = "<4.0,>=3.10"
dependencies = []
name = "tigerbeetle-python"
version = "0.1.0"
description = "TigerBeetle Python Client"

[tool.pdm.dev-dependencies]
dev = ["cffi<2.0.0,>=1.15.1"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
